fix overflow issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,7 @@
         align-items: center;
 
         gap: 32px;
+        padding: 32px;
         overflow: hidden;
 
         .card-back {
