--- a/src/app/home/main-content/skill-panel/skill-panel.component.scss
+++ b/src/app/home/main-content/skill-panel/skill-panel.component.scss
@@ -18,6 +18,11 @@
             background:transparent;
             margin: 8px;
         }
+
+        img {
+            width: 32px;
+            height: 32px;
+        }
     
         * {
             background: transparent;
