--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,33 +6,35 @@ $tertiary-color: #34419d;
 * {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
     background-color: $secondary-color;
     color: $main-color;
+}
 
-    html {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        body {
-          min-width: 100%;
-          min-height: 100%;
-        }
-    }
+html {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    h1 {
-        color: #A2EC48;
+  min-width: 100%;
+  min-height: 100%;
+  
+  body {
+    min-width: 100%;
+    min-height: 100%;
+
+    app-root {
+      min-width: 100%;
+      min-height: 100%;
     }
+  }
 }
 
 @media only screen and (max-width: 900px) {
     * {
       html {
         body {
-            width: 100%;
-            height: 100%;
+            min-width: 100%;
+            min-height: 100%;
         }
       }
     }
